[gd_scene load_steps=4 format=2]

[ext_resource path="res://environment/lightmasks/circle.png" type="Texture" id=1]
[ext_resource path="res://environment/lightmasks/muzzleflash.png" type="Texture" id=2]
[ext_resource path="res://weapons/prefab/GunInstance.gd" type="Script" id=3]

[node name="Gun" type="Node2D"]
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="MuzzleLight" type="Light2D" parent="."]
visible = false
position = Vector2( 49.576, -0.0682415 )
scale = Vector2( 0.65677, 0.685654 )
texture = ExtResource( 2 )
offset = Vector2( 25, 10 )
texture_scale = 0.05
color = Color( 0.976471, 0.756863, 0, 1 )
energy = 3.0
shadow_enabled = true

[node name="MuzzleAmbientLight" type="Light2D" parent="."]
visible = false
position = Vector2( 74, 0 )
texture = ExtResource( 1 )
offset = Vector2( 25, 10 )
texture_scale = 0.5
color = Color( 0.929412, 0.858824, 0.0901961, 1 )
energy = 0.75
shadow_enabled = true

[node name="FireSound" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0

[node name="ReloadStartSound" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0

[node name="ReloadEndSound" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
